examples/test/testpolicy13873.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13873
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key33: value0
      key39: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value30
          key45: value27
          key42: value21
      podSelector:
        matchLabels:
          key22: value41
          key7: value23
